--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -584,7 +584,13 @@ endif
 
 ifdef EXECUTABLE
 
-all: all_subdirs $(EXECUTABLE) symlinks
+ifneq ($(CL_SYMLINKS),)
+override CL_SL_NAMES := $(notdir $(CL_SYMLINKS))
+$(CL_SL_NAMES):
+	ln -s $(CL_SYMLINKS) .
+endif
+
+all: all_subdirs $(EXECUTABLE) $(CL_SL_NAMES)
 
 $(EXECUTABLE): $(CL_BD)/$(EXECUTABLE)
 	ln -sf $(CL_BD)/$(EXECUTABLE) $(EXECUTABLE)
@@ -596,16 +602,7 @@ ifdef CL_OPTIMIZE
 endif
 
 clean: $(CL_CLEAN) clean_subdirs $(ALWAYS)
-	rm -rf $(CL_BD)
-	rm -f $(EXECUTABLE)
-ifneq ($(CL_SYMLINKS),)
-	for i in $(CL_SYMLINKS); do rm -f `basename $$i`; done
-endif
-
-symlinks: $(ALWAYS)
-ifneq ($(CL_SYMLINKS),)
-	ln -sf $(CL_SYMLINKS) .
-endif
+	rm -rf $(CL_BD) $(EXECUTABLE) $(CL_SL_NAMES)
 
 endif
 
@@ -640,7 +637,6 @@ endif
 endif
 
 clean: $(CL_CLEAN) clean_subdirs $(ALWAYS)
-	rm -rf $(CL_BD)
-	rm -f $(CL_LIBRARY_FNAME) $(CL_LIBRARY_SONAME) $(CL_LIBRARY_CNAME)
+	rm -rf $(CL_BD) $(CL_LIBRARY_FNAME) $(CL_LIBRARY_SONAME) $(CL_LIBRARY_CNAME)
 
 endif
