--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -564,7 +564,7 @@ ifdef SUBDIRS
 
 all_subdirs install_subdirs clean_subdirs: $(ALWAYS)
 	for dir in $(SUBDIRS); do \
-	  ( (cd $$dir && $(MAKE) `echo $@ | cut -d_ -f1`) || exit 1 ) \
+	  (cd $$dir && $(MAKE) `echo $@ | cut -d_ -f1`) || exit 1; \
 	done
 
 ifeq ($(EXECUTABLE)$(LIBRARY),)
